<resources>
    <string name="app_name">PINotes</string>
    <string name="tile_name">Add PINote</string>
</resources>
